--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,25 @@
 {
-  "name": "Monex 借貸管理",
+  "name": "Monex 借款管理系統",
   "short_name": "Monex",
-  "description": "智慧借款管理系統",
-  "start_url": "/",
+  "description": "智慧借款管理系統 - 多人協作雲端版",
+  "start_url": "./",
+  "scope": "./",
   "display": "standalone",
+  "orientation": "portrait",
   "background_color": "#ffffff",
   "theme_color": "#4f46e5",
   "icons": [
     {
       "src": "icon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "icon-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
